# onestring

./: .gitignore  README.md
assignments/: 00-setup.txt  01-task_one_data.txt  02-task_two_api.txt  03-task_three_access.txt  04-task_four_legos.txt  README.md
code/data_collection/: COMPARE.TXT  esp32_pico_comparison.md  five_platform_comparison.md
code/data_collection/arduino-cli/: README.TXT
code/data_collection/circuitpython/: README.TXT
code/data_collection/esp-idf/: README.TXT
code/data_collection/micropython/: README.TXT
code/data_collection/pico-sdk/: README.TXT
code/data_collection/pico-sdk/pico2w/bmp280/: CMakeLists.txt  lwipopts.h  main.c
code/data_storage/go/access/: go.mod  main.go
code/data_storage/go/data/: go.mod  go.sum  main.go
code/data_storage/java/access/: build.gradle
code/data_storage/java/data/: build.gradle
code/data_storage/python/access/: README.TXT  cassandra_data_access.py  main.py  mongo_data_access.py  mysql_data_access.py  postgres_data_access.py  redis_data_access.py  requirements.txt  sensor_data_access_protocol.py
code/data_storage/rust/data/: Cargo.toml
code/data_storage/rust/data/src/: cassandra_data.rs  main.rs  mongo_data.rs  mysql_data.rs  postgres_data.rs  redis_data.rs  sensor_data_json_helper.rs
code/data_storage/rust/legos/axum-app/: Cargo.toml
code/data_storage/rust/legos/axum-app/src/: main.rs
code/data_storage/rust/legos/axum-app/src/data/: cassandra_data_access.rs  postgres_data_access.rs
code/scripts/: all_language_files.sh  clear_all_builds.sh  test_all_apis.sh
docker/: README.TXT
prompts/: README.md
prompts/all_languages_code/: all_assignments.txt  all_go_files.txt  all_java_files.txt  all_python_files.txt  all_rust_files.txt  all_swift_files.txt
prompts/all_languages_prompts/: Onestring_Task_Prompts_Go.txt  Onestring_Task_Prompts_Java.txt  Onestring_Task_Prompts_Python.txt  Onestring_Task_Prompts_Rust.txt  Onestring_Task_Prompts_Swift.txt
prompts/better_prompts/: README.md  better_task_01_data_prompts.md  better_task_02_api_prompts.md  better_task_03_access_prompts.md  better_task_04_legos_prompts.md
prompts/reverse_prompts/: README.md  reverse_02_python_api_flask.md  reverse_03_python_api_django.md  reverse_04_python_access.md  reverse_05_python_legos_flask.md  reverse_06_python_legos_django.md  reverse_engineered_summary.md
prompts/sufficient_prompts/: README.md  improved_task_01_data_prompts.md  improved_task_02_api_prompts.md  improved_task_03_access_prompts.md  improved_task_04_legos_prompts.md
(+169 files in other folders)
