# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2025-2026 ggeoffre, LLC

[package]
name = "rust_ai_data"
version = "0.1.0"
edition = "2021"

[dependencies]
cdrs-tokio = "8.1.9"
mongodb = "2.5"
sqlx = { version = "0.8.6", features = ["mysql", "postgres", "runtime-tokio-native-tls"] }
redis = { version = "1.0", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.145"
uuid = "1.4.1"
rand = "0.8.5"
chrono = "0.4.31"
bson = "2.0"
csv = "1.1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
